--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -50,7 +50,12 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
   cloud_functions: ^5.6.2
+  firebase_storage: ^12.4.1
+  firebase_messaging: ^15.2.0
   geolocator: ^13.0.1
+
+  # Upload images (produits / profil)
+  image_picker: ^1.1.2
 
   # Auth providers
   google_sign_in: ^6.0.0
@@ -84,7 +89,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/splash/maslive.png
+    - assets/splash/
     - assets/textures/
 
   # An image asset can refer to one or more resolution-specific "variants", see
