--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -69,6 +69,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_native_splash: ^2.4.0
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -91,6 +93,14 @@ flutter:
   assets:
     - assets/splash/
     - assets/textures/
+
+# Native splash configuration
+flutter_native_splash:
+  color: "#000000"
+  image: assets/splash/maslivepink.png
+  android: true
+  ios: true
+  web: true
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
