--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -52,6 +52,8 @@
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string>Nous avons besoin de votre position pour vous recentrer sur la carte.</string>
 		<key>UIStatusBarHidden</key>
+		<true/>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
 	</dict>
 </plist>
