--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -65,6 +65,11 @@ dependencies:
   # RevenueCat
   purchases_flutter: ^8.0.0
 
+  # Internationalisation (i18n)
+  intl: ^0.19.0
+  get: ^4.6.6
+  shared_preferences: ^2.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -83,6 +88,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
