--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -66,7 +69,7 @@ dependencies:
   purchases_flutter: ^8.0.0
 
   # Internationalisation (i18n)
-  intl: ^0.19.0
+  intl: ^0.20.2
   get: ^4.6.6
   shared_preferences: ^2.2.2
 
