--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
 
+  # Mapbox
+  mapbox_maps_flutter: ^2.6.0
+
   # HTTP (pour OSRM routing)
   http: ^1.1.0
 
@@ -77,8 +80,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_native_splash: ^2.4.0
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -102,27 +103,20 @@ flutter:
   assets:
     - assets/splash/
     - assets/textures/
-
-# Native splash configuration
-flutter_native_splash:
-  color: "#000000"
-  image: assets/splash/wom1.png
-  android: true
-  ios: true
-  web: true
-  fullscreen: true
-  android_gravity: fill
-  ios_content_mode: scaleAspectFill
-  web_image_mode: cover
-  android_12:
-    color: "#000000"
-    image: assets/splash/wom1.png
+    - assets/map_styles/google_light.json
+    - assets/images/maslivesmall.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
+
+  # To add custom fonts to your application, add a fonts section here,
+  fonts:
+    - family: MASLIVEBrushV2
+      fonts:
+        - asset: assets/fonts/MASLIVEBrushV2.ttf
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
