--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,14 +59,10 @@
       "problemMatcher": []
     },
     {
-      "label": "🚀 MASLIVE: ADD → COMMIT → PUSH → BUILD → DEPLOY",
+      "label": "MASLIVE: Git add commit push",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE && git add . && git commit -m \"update: wizard circuit avec prévisualisations\" && git push origin main && cd app && flutter build web --release && cd .. && firebase deploy --only hosting",
-      "problemMatcher": [],
-      "isBackground": false,
-      "group": {
-        "kind": "build"
-      }
+      "command": "cd /workspaces/MASLIVE && git add . && git commit -m \"chore: connect shop routing\" && git push origin main",
+      "problemMatcher": []
     }
   ]
 }
