feat: connect shop article navigation & routes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -63,6 +63,21 @@
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && git add . && git commit -m \"chore: connect shop routing\" && git push origin main",
       "problemMatcher": []
+    },
+    {
+      "label": "MASLIVE: 🚀 Commit + Push + Build + Deploy",
+      "type": "shell",
+      "command": "bash /workspaces/MASLIVE/commit_push_build_deploy.sh \"feat: amélioration shop (stock, assets, admin commerce)\"",
+      "problemMatcher": [],
+      "isBackground": false,
+      "group": {
+        "kind": "build"
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
     }
   ]
 }
