--- a/.github/workflows/build-deploy-mapbox.yml
+++ b/.github/workflows/build-deploy-mapbox.yml
@@ -17,7 +17,8 @@ jobs:
       # Setup Flutter
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'latest'
+          flutter-version: "3.24.0"
+          cache: true
 
       # Get dependencies
       - name: Install dependencies
@@ -29,22 +30,3 @@ jobs:
           cd app
           flutter build web --release \
             --dart-define=MAPBOX_ACCESS_TOKEN=${{ secrets.MAPBOX_PUBLIC_TOKEN }}
-
-      # Deploy to Firebase Hosting
-      - name: Deploy to Firebase Hosting
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          npm install -g firebase-tools
-          firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
-
-      # Notify on success
-      - name: Deployment Success
-        if: success()
-        run: echo "✅ Deployment to Firebase complete!"
-
-      # Notify on failure
-      - name: Deployment Failed
-        if: failure()
-        run: |
-          echo "❌ Deployment failed"
-          echo "Check MAPBOX_PUBLIC_TOKEN and FIREBASE_TOKEN secrets"
