--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
 
   # Upload images (produits / profil)
   image_picker: ^1.1.2
+  permission_handler: ^11.3.1
 
   # Auth providers
   google_sign_in: ^6.0.0
