--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   web: any
 
   # Carte OSM
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
 
   # Mapbox
   mapbox_maps_flutter: ^2.6.0
@@ -78,6 +80,11 @@ dependencies:
   get: ^4.6.6
   shared_preferences: ^2.5.4
   url_launcher: ^6.3.2
+  
+  # Charts & exports
+  fl_chart: ^0.70.1
+  share_plus: ^10.1.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
