fix(web): mapbox ready callback interop

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -109,7 +109,7 @@
     {
       "label": "MASLIVE: Git add commit push",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE && git add . && git commit -m \"chore: connect shop routing\" && git push origin main",
+      "command": "cd /workspaces/MASLIVE && git add app/lib/widgets/web_mapbox_gl_map.dart app/pubspec.yaml .vscode/tasks.json && git commit -m \"fix(web): mapbox ready callback interop\" && git push origin main",
       "problemMatcher": []
     },
     {
