--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -85,6 +85,10 @@ dependencies:
   fl_chart: ^0.70.1
   share_plus: ^10.1.3
   path_provider: ^2.1.5
+  
+  # Cache local & offline
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -96,6 +100,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  
+  # Hive code generation
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
