--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -78,6 +78,17 @@
       "problemMatcher": []
     },
     {
+      "label": "MASLIVE: Check/init Superadmin Articles (Firestore)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE/functions && node scripts/check_or_init_superadmin_articles.js",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Setup and deploy",
       "type": "shell",
       "command": "bash /workspaces/MASLIVE/scripts/setup_deploy.sh",
@@ -145,6 +156,17 @@
       "label": "MASLIVE: Git commit + push (fix mapbox interop)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && git add app/lib/widgets/web_mapbox_gl_map.dart app/pubspec.yaml .vscode/tasks.json && git commit -m \"fix(web): mapbox ready callback interop\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
+      "label": "MASLIVE: Git commit + push (tasks update)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && git add .vscode/tasks.json && git commit -m \"chore(vscode): add task to check/init superadmin articles\" && git push origin main",
       "problemMatcher": [],
       "presentation": {
         "reveal": "always",
