--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   # Upload images (produits / profil)
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
+  image: ^4.3.0  # Traitement d'images (resize, compression)
 
   # Auth providers
   google_sign_in: ^6.0.0
