perf(web): reduce map rebuilds + mapbox updates

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -305,6 +305,18 @@
       }
     },
     {
+      "label": "MASLIVE: 🚀 Commit + Push + Build + Deploy (perf web map)",
+      "type": "shell",
+      "command": "bash /workspaces/MASLIVE/commit_push_build_deploy.sh \"perf(web): reduce map rebuilds + mapbox updates\"",
+      "problemMatcher": [],
+      "isBackground": false,
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Firebase deploy (hosting+functions+rules+indexes)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && firebase deploy --only hosting,functions,firestore:rules,firestore:indexes",
