--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   firebase_messaging: ^15.2.0
   geolocator: ^13.0.1
 
+  # Stripe
+  flutter_stripe: ^11.0.0
+
   # Upload images (produits / profil)
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
