--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -213,6 +213,17 @@
       }
     },
     {
+      "label": "MASLIVE: Git commit + push (single-file shop orders notifications)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && git add app/lib/shop_orders_notifications.dart app/lib/pages/app_shell.dart app/pubspec.yaml .vscode/tasks.json && git commit -m \"feat(orders): single-file notifications (Navigator)\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Git commit + push (fix web bootstrap)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && git add app/web/flutter_bootstrap.js && git commit -m \"fix(web): restore flutter_bootstrap.js\" && git push origin main",
